# csc746project

./: .gitattributes  CMakeLists.txt  README.md  benchmark.cpp  kmp_basic.cpp  kmp_omp.cpp
charts/700mb-execution/: basic_speedup.py  speedup.csv
charts/700mb-speedup/: basic_speedup.py  speedup_gather.csv
charts/basic-execution/: basic_speedup.py  speedup.csv
charts/openmp-execution/: basic_speedup.py  speedup.csv
charts/speedup/: basic_speedup.py  speedup_gather.csv
dataset/: 1400mb.txt  1mb.txt  700mb.txt
opt/: kmp-basic  kmp-omp-1  kmp-omp-16  kmp-omp-32  kmp-omp-4  kmp-omp-64  kmp-omp-8
